--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -234,3 +234,103 @@ $(".votebuttons").click(function() {
   }
   setTimeout(stopSpin, 1800);
 })
+
+$("#gameresultbutton").click(function () {
+  $("#gametotalresults").show();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r1resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").show();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r2resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").show();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r3resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").show();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r4resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").show();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r5resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").show();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r6resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").show();
+  $("#round7results").hide();
+  $("#round8results").hide();
+});
+$("#r7resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").show();
+  $("#round8results").hide();
+});
+$("#r8resultbutton").click(function () {
+  $("#gametotalresults").hide();
+  $("#round1results").hide();
+  $("#round2results").hide();
+  $("#round3results").hide();
+  $("#round4results").hide();
+  $("#round5results").hide();
+  $("#round6results").hide();
+  $("#round7results").hide();
+  $("#round8results").show();
+});
