--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -334,4 +334,8 @@
     color: red;
     font-size: 120%;
   }
+  #round1results, #round2results, #round3results, #round4results, #round5results, #round6results,
+  #round7results, #round8results {
+    display: none;
+  }
 }
